src/styles/Welcome.scss
@import "./colors.scss";
@import "./breakpoints.scss";

.welcome-container {
  margin: 0 auto;
  margin-top: 20vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;

  a {
    font-weight: bold;
  }

  @include mobile {
    margin-top: 15vh;
  }

  .welcome-title {
    font-family: "Monaco", Consolas, "Lucida Console", monospace;
    font-size: 4.5em;
    color: $purple;

    &:before {
      content: ">\a0";
    }

    @include mobile {
      font-size: 2.3em;
    }

    span {
      background-color: rgba($purple, 0.65);
      animation: caret 1s steps(1) infinite;
    }

    @keyframes caret {
      50% {
        background-color: transparent;
      }
    }
  }

  .welcome-row {
    display: flex;
    margin: 80px 0;

    .welcome-image {
      margin-right: 30px;
    }

    .welcome-description {
      font-family: "Inter", sans-serif;
      font-weight: 200;
      font-size: 1.3em;
      line-height: 40px;
      color: $grey;

      @include mobile {
        font-size: 1.2em;
        line-height: 30px;
        max-width: 100%;
      }
    }

    @include mobile {
      max-width: 100%;
      margin: 50px 0;
    }
  }
}

